# hattori

./: .gitignore  BACKEND_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  SCHEMA_MIGRATION.md  test_endpoints.py
backend/: .env.example  .gitignore  README.md  check_schema.py  debug_auth.py  debug_auth_detailed.py  debug_login_flow.py  fix_schema.py  import_excel_data.py  pyproject.toml  requirements.txt  seed_dashboard_data.py  seed_db.py  seed_infrastructure_data.py  seed_sample_data.py  test_all_endpoints.py  test_auth_error.py  update_passwords.py  view_users.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  alert.py  asset.py  asset_type.py  audit_log.py  document.py  import_job.py  password_reset_token.py  project.py  report_template.py  resource.py  resource_type.py  role.py  session.py  template.py  user.py
backend/app/routes/: __init__.py  asset_types.py  assets.py  auth.py  dashboard.py  dashboard_tabs.py  projects.py  resource_types.py  resources.py  users.py  (+1 more)
backend/sample_data/: README.md  create_sample_excel.py  data.xlsx
backend/tests/: conftest.py  test_asset_types.py  test_auth_end_to_end.py  test_auth_utils.py  test_checkpoint_1.py  test_excel_utils.py  test_import_service.py  test_import_validation.py  test_jwt_utils.py  test_phase14_dashboard.py  test_phase6_user_management.py  test_phase7_integration.py  test_phase7_projects.py  test_rbac_decorator.py  test_rbac_enforcement.py  test_session_timeout.py  test_user_management.py  test_validation_service.py
backend/venv312/: pyvenv.cfg
(+147 files in other folders)
